# Engineering-Standards-Canary

./: AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  governance.config.json  project-manifest.json  pyproject.toml
.github/workflows/: bash-functional-canary.yml  governance.yml
bash-functional/: AGENTS.md  README.md  project-manifest.json
bash-functional-scenarios/bats-failure/: AGENTS.md  README.md  project-manifest.json
bash-functional-scenarios/caller-config-bypass/: .shellcheckrc  AGENTS.md  README.md  governance.config.json  project-manifest.json
bash-functional-scenarios/format-failure/: AGENTS.md  README.md  project-manifest.json
bash-functional-scenarios/shellcheck-failure/: AGENTS.md  README.md  project-manifest.json
bash-functional/spec/: echo_value.bats
canary-scenarios/mandatory-control-disablement/: AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  governance.config.json  project-manifest.json
canary-scenarios/missing-required-file/: AGENTS.md  CONTRIBUTING.md  README.md  governance.config.json  project-manifest.json
docs/: CANARY_OPERATIONS.md
python-scenarios/malformed-metadata/: project-manifest.json  pyproject.toml
python-scenarios/runtime-tool-substitution/: project-manifest.json  pyproject.toml
src/: canary_identity.py
src/canary_identity/: __init__.py  cli.py  identity.py
src/cyclonedx_py/: __init__.py  __main__.py
src/mypy/: __init__.py  __main__.py
src/pip_audit/: __init__.py  __main__.py
src/pytest/: __init__.py  __main__.py
src/ruff/: __init__.py  __main__.py
tests/: test_identity.py
(+12 files in other folders)
